--- a/app/src/main/res/layout/fragment_sleep_quality.xml
+++ b/app/src/main/res/layout/fragment_sleep_quality.xml
@@ -24,7 +24,8 @@
             android:textSize="@dimen/title_text_size"
             app:layout_constraintBottom_toTopOf="@+id/quality_zero_image"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="@dimen/margin" />
 
         <ImageView
             android:id="@+id/quality_zero_image"
@@ -74,7 +75,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/quality_zero_image"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_sleep_3" />
+            app:srcCompat="@drawable/ic_sleep_3"
+            android:layout_marginLeft="@dimen/margin" />
 
         <ImageView
             android:id="@+id/quality_four_image"
