--- a/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="sleepTrackerViewModel"
+            type="me.alberto.sleeptracker.sleeptracker.SleepTrackerViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,7 +34,7 @@
                 android:layout_marginStart="@dimen/margin"
                 android:layout_marginTop="@dimen/margin"
                 android:layout_marginEnd="@dimen/margin"
-                android:text="@string/how_was_hour_sleep" />
+                android:text="@{ sleepTrackerViewModel.nightsString }" />
         </ScrollView>
 
         <!-- With data binding and LiveData, we can track the buttons' visibility states
@@ -46,7 +52,9 @@
             app:layout_constraintEnd_toStartOf="@+id/stop_button"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="@dimen/margin" />
+            android:layout_marginLeft="@dimen/margin"
+            android:onClick="@{ () -> sleepTrackerViewModel.onStartTracking() }"
+            />
 
         <Button
             android:id="@+id/stop_button"
@@ -59,7 +67,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/start_button"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="@dimen/margin" />
+            android:layout_marginRight="@dimen/margin"
+            android:onClick="@{ () -> sleepTrackerViewModel.onStopTracking() }"
+            />
 
         <Button
             android:id="@+id/clear_button"
@@ -72,7 +82,9 @@
             android:text="@string/clear"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="@{ () -> sleepTrackerViewModel.onClear()}"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
