--- a/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -14,28 +14,6 @@
         android:layout_height="match_parent"
         tools:context=".sleeptracker.SleepTrackerFragment">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/clear_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stop_button">
-
-            <!-- In the TextView, we can access the nightsString LiveData,
-                 which keeps it displayed and updated in the TextView
-                 whenever it changes. -->
-
-            <TextView
-                android:id="@+id/textview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin"
-                android:layout_marginTop="@dimen/margin"
-                android:layout_marginEnd="@dimen/margin"
-                android:text="@{ sleepTrackerViewModel.nightsString }" />
-        </ScrollView>
 
         <!-- With data binding and LiveData, we can track the buttons' visibility states
              from the ViewModel. The click handler is in the ViewModel as well, and
@@ -54,6 +32,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="@dimen/margin"
             android:onClick="@{ () -> sleepTrackerViewModel.onStartTracking() }"
+            android:enabled="@{ sleepTrackerViewModel.startButtonVisible }"
             />
 
         <Button
@@ -69,6 +48,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginRight="@dimen/margin"
             android:onClick="@{ () -> sleepTrackerViewModel.onStopTracking() }"
+            android:enabled="@{ sleepTrackerViewModel.stopButtonVisible }"
             />
 
         <Button
@@ -84,6 +64,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:onClick="@{ () -> sleepTrackerViewModel.onClear()}"
+            android:enabled="@{ sleepTrackerViewModel.clearButtonVisible }"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/sleep_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/clear_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/start_button"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
