--- a/app/src/main/res/layout/sleep_item_layout.xml
+++ b/app/src/main/res/layout/sleep_item_layout.xml
@@ -7,11 +7,17 @@
         <variable
             name="sleepNight"
             type="me.alberto.sleeptracker.database.SleepNight" />
+
+        <variable
+            name="clickListener"
+            type="me.alberto.sleeptracker.sleeptracker.SleepNightAdapter.SleepNightListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{ () -> clickListener.onClick(sleepNight) }"
+        >
 
         <ImageView
             android:id="@+id/quality_image"
